<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtDateTime"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCurrentUTC"
            android:text="@string/show_utc_time"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDateTime"/>

        <Button
            android:id="@+id/btnCurrentZone"
            android:text="@string/show_zone_time"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCurrentUTC"/>

        <Button
            android:id="@+id/btnLocal"
            android:text="@string/btn_local"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCurrentZone"/>

        <Button
            android:id="@+id/btnUTCToZone"
            android:text="@string/utc_to_zone"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLocal"/>

        <Button
            android:id="@+id/btnZoneToUTC"
            android:text="@string/zone_to_utc"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnUTCToZone"/>

        <Button
            android:id="@+id/btnStringToLocal"
            android:text="@string/string_to_local"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnZoneToUTC"/>

        <Button
            android:id="@+id/btnLocalToString"
            android:text="@string/local_to_string"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnStringToLocal"/>

        <Button
            android:id="@+id/btnDiffFormats"
            android:text="@string/diff_formats"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLocalToString"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>